--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,14 +15,8 @@
     <header>
       <div class="container stravaig-header">
         <a id="a-title" href="{{ '/' | relative_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <h1>Stravaig Projects</h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-
-        <section id="downloads">
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="{{ site.nuget.url }}" class="btn btn-nuget"><span class="icon"></span>View on NuGet</a>
-        </section>
         <small>Documentation last built on {{ site.time | date: '%A, %e %B, %Y' }}</small>
       </div>
     </header>
