--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,7 +17,6 @@
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>Stravaig Projects</h1>
         </a>
-        <small>Documentation last built on {{ site.time | date: '%A, %e %B, %Y' }}</small>
       </div>
     </header>
 
@@ -28,3 +27,4 @@
     </div>
   </body>
 </html>
+<!-- This page last built on {{ site.time | date: '%A, %e %B, %Y' }} -->
